--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.exclusions=**/*_test.go
 
 sonar.tests=.
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**
+sonar.test.exclusions=**/vendor/**,**/*.js
 
 sonar.go.tests.reportPaths=test-results/test-report.out
 sonar.go.coverage.reportPaths=test-results/coverage.out
