--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,12 @@ sonar.projectKey=Dobefu_gofutz
 sonar.organization=dobefu
 sonar.projectName=GoFutz
 
-sonar.sources=.
+sonar.sources=**/*.go
 sonar.exclusions=**/*_test.go
 
-sonar.tests=.
+sonar.tests=**/*.go
 sonar.test.inclusions=**/*_test.go
-sonar.test.exclusions=**/vendor/**,**/*.js
+sonar.test.exclusions=**/vendor/**
 
 sonar.go.tests.reportPaths=test-results/test-report.out
 sonar.go.coverage.reportPaths=test-results/coverage.out
