fix: Resolve an issue in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,12 +2,13 @@ sonar.projectKey=Dobefu_gofutz
 sonar.organization=dobefu
 sonar.projectName=GoFutz
 
-sonar.sources=**/*.go
+sonar.sources=.
 sonar.exclusions=**/*_test.go
 
-sonar.tests=**/*.go
+sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 sonar.test.exclusions=**/vendor/**
+sonar.coverage.exclusions=**/vendor/**,**/*.js
 
 sonar.go.tests.reportPaths=test-results/test-report.out
 sonar.go.coverage.reportPaths=test-results/coverage.out
